[Catalog] Resizing and alignment issue for several cards #951

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -68,9 +68,9 @@
 .card:hover {
   // transform: rotateY(180deg);
   cursor: pointer;
-  .chip {
-    // background: rgba(182, 215, 168, 0.4);
-  }
+  // .chip {
+  //   // background: rgba(182, 215, 168, 0.4);
+  // }
 }
 .pattern-image-overlay {
   opacity: 0.5;
@@ -409,13 +409,13 @@ input[type="checkbox"] {
   text-align: center;
 }
 
-.btn-tooltip-grp {
-  // width: 10rem;
-}
+// .btn-tooltip-grp {
+//   // width: 10rem;
+// }
 
-.tooltip-modal .tooltiptext-modal {
-  // margin-top: 1rem;
-}
+// .tooltip-modal .tooltiptext-modal {
+//   // margin-top: 1rem;
+// }
 
 ::-webkit-scrollbar-corner {
   background-color: transparent;
@@ -456,31 +456,30 @@ input[type="checkbox"] {
 }
 .modal-pattern-name {
   color: #333;
-  text-align: center;
+  margin-left: 40px;
   font-weight: 800;
   font-size: 12px;
   white-space: nowrap;
-  text-align: center;
   padding-top: 7px;
 }
 .modal-chip {
-  display: inline-flex;
-  flex-direction: row-reverse;
-  float: right;
-  background-color: #b6d7a8ff;
-  border: none;
-  cursor: default;
-  height: 18px;
-  outline: none;
-  padding: 1px;
-  font-size: 10px;
-  font-family: "Open Sans", sans-serif;
-  white-space: nowrap;
-  align-items: center;
-  border-radius: 16px;
-  vertical-align: middle;
-  text-decoration: none;
-  justify-content: center;
+     display: inline-flex;
+     flex-direction: row-reverse;
+     float: right;
+     background-color: #b6d7a8ff;
+     border: none;
+     cursor: default;
+     height: 18px;
+     outline: none;
+     padding: 1px;
+     font-size: 10px;
+     font-family: "Open Sans", sans-serif;
+     white-space: nowrap;
+     align-items: center;
+     border-radius: 16px;
+     vertical-align: middle;
+     text-decoration: none;
+     justify-content: center;
 }
 .modal-card {
   position: relative;
@@ -501,20 +500,19 @@ input[type="checkbox"] {
 }
 .modal-pattern-image {
   width: 55%;
-
+  margin-left: 11%;
   object-fit: contain;
   position: absolute;
-  margin-left: 5%;
   border-radius: 15px;
-  padding-bottom: 2px;
+  padding-bottom: 0px;
 }
 .modal-pattern-id {
-  position: absolute;
-  bottom: 0;
-  font-size: 8px;
-  right: 0;
-  padding-top: 10px;
-  margin-right: 14px;
+        position: absolute;
+		    bottom: 0;
+		    font-size: 8px;
+		    right: 0;
+		    margin: 0px 62px 4px 0px;
+		    
 }
 
 .modal-container {
@@ -592,23 +590,23 @@ label {
   vertical-align: middle;
   padding-right: 2px;
 }
-.modal-pattern-image {
-  width: 55%;
+// .modal-pattern-image {.
+//   width: 55%;
 
-  object-fit: contain;
-  position: absolute;
-  margin-left: 5%;
-  border-radius: 15px;
-  padding-bottom: 2px;
-}
-.modal-pattern-id {
-  position: absolute;
-  bottom: 0;
-  font-size: 8px;
-  right: 0;
-  padding-top: 10px;
-  margin-right: 14px;
-}
+//   object-fit: contain;
+//   position: absolute;
+//   margin-left: 5%;
+//   border-radius: 15px;
+//   padding-bottom: 2px;
+// }
+// .modal-pattern-id {.
+//   position: absolute;
+//   bottom: 0;
+//   font-size: 8px;
+//   right: 0;
+//   padding-top: 10px;
+//   margin-right: 14px;
+// }
 .modal-window div div:not(:last-of-type) {
   margin-bottom: 15px;
 }
